Intro And Purpose

--- a/ArchitectureRequirement.tex
+++ b/ArchitectureRequirement.tex
@@ -48,12 +48,17 @@
 \section{Change Log}
 
 \section{Introduction}
+Designing and implementing a system as the one in question is a vast amount of work and requires a lot of planning and thinking. All the functional requirements needed for the system were covered in the previous phase. In this phase all the non-functional requirements will be covered. These are all categorized as architectural requirements.  \\
 \subsection{Purpose}
-\subsection{Document Convention}
+The main purpose of this document is to decompose the system at hand and fully describe the decomposition in terms of subsystem responsibilities, the mapping of the subsystem to hardware and the dependencies among the subsystems. Policy decisions that need to be made is also described in this document. This included decisions such as access control, data storage and control flow.\\\\
+The document will cover all the non-functional aspects of the requirements including:\\
+•	the architectural scope comprising the responsibilities,\\
+•	the quality requirements for the software system,\\
+•	the access and integration requirements, and\\
+•	the architectural constrains. \\
+
 \subsection{Project Scope}
-\subsection{References}
-\subsection{Related Documents}
-\subsection{System Description}
+The scope of this phase is understanding the functional requirements covered in the previous phase and using them to build and derive the architectural requirements needed for the implementation of the system.\\
 
 \section{Access Channel Requirements}
 \subsection{Platforms}
