--- a/COS301_Phase2-Group3a.tex
+++ b/COS301_Phase2-Group3a.tex
@@ -29,7 +29,7 @@
 
 \begin{center}
 % Upper part of the page       
-\includegraphics[width=1\textwidth]{./up-logo.jpg}\\[0.4cm]    
+\includegraphics[width=1\textwidth]{./University_of_Pretoria_Logo.PNG}\\[0.4cm]    
 \textsc{\LARGE Department of Computer Science}\\[1.5cm]
 \textsc{\Large COS 301 - Software Engineering}\\[0.5cm]
 % Title
