Edit to quality requirements.

--- a/COS301_Phase2-Group3a.tex
+++ b/COS301_Phase2-Group3a.tex
@@ -159,16 +159,35 @@ The scope of this phase is understanding the functional requirements covered in 
 
 \section{Quality Requirements}
 \subsection{Performance}
+	\subsubsection{Expectation:}
+	\subsubsection{Prioritization:}
+	\subsubsection{Example in System:}
+
 \subsection{Reliability}
 \subsection{Scalability}
+	\subsubsection{Expectation:} System should be able to handle (at the very least) the number of registered students on the CS LDAP system. 
+	\subsubsection{Prioritization:} Critical
+	\subsubsection{Example in System:} Number of simultaneous posts/comments, number of online users etc.
 \subsection{Security}
 \subsection{Flexibility}
+\subsection{Integratability}
+	\subsubsection{Expectation:} System must integrate well with any host website.
+	\subsubsection{Prioritization:} Important
+	\subsubsection{Example in System:} Users of the host site should be able to access the forum easily. It should seem as if its merely an extension of the host site.
 \subsection{Maintainability}
+	\subsubsection{Expectation:} System must be easy to maintain/modify
+	\subsubsection{Prioritization:} Important
+	\subsubsection{Example in System:} Modular separation of concerns, low coupling and reduced dependencies.
 \subsection{Auditability}
+	\subsubsection{Expectation:} System must be auditable
+	\subsubsection{Prioritization:} Important
+ 	\subsubsection{Example in System:} The plagiarism and netiquette checker should have no problem editing the page to ensure that every post is appropriate for the website.
 \subsection{Monitorability}
 \subsection{Cost}
 \subsection{Usability}
-
+	\subsubsection{Expectation:} The system must be easy to use by the average user.
+	\subsubsection{Prioritization:} Critical
+	\subsubsection{Example in System:} Navigating the site should be straight forward. Buttons and links should be clearly visible and placed in easy to find locations. Naming convention should be descriptive and unambiguous.
 \section{Integration Requirements}
 \subsection{Integration Channel}
 \subsection{Protocols}
