--- a/COS301_Phase2-Group3a.tex
+++ b/COS301_Phase2-Group3a.tex
@@ -155,7 +155,88 @@ The document will cover all the non-functional aspects of the requirements inclu
 The scope of this phase is understanding the functional requirements covered in the previous phase and using them to build and derive the architectural requirements needed for the implementation of the system.\\
 
 \section{Access Channel Requirements}
-\subsection{Platforms}
+\begin{description}
+\item Logging in to the system is done over HTTP POST, and  we send the user's password as an MD5-encrypted string. The user's login details are kept in an HTTP session so the user does not have to keep logging in every time he/she makes a request to the server. HTTP sessions are invalidated when the user logs out. Since all communication is done over HTTPS, the login credentials should be relatively safe from malicious stealing or sniffing of data between the client and server applications.
+\item Common address redundancy protocol will be used to provide load-balancing as well as fail-safe redundancy. The servers will share a virtual IP address, which will be floated between them if the main server fails or if there are load problems.
+\item All CRUD actions that will make changes to the database contents will be intercepted at the services layer and logged automatically along with the id of the user making the changes, the status and the date. This will ensure auditability of the system. Any actions that would delete data from the database will not destroy any data, but instead set a `deleted' flag.
+\item Users are assigned a status level and permissions are set by their status. These permissions will determine the features covered by the interface. This will ensure the users only access features for which they are authorized. For example a guest cannot comment on the posts. 
+\item Users are allowed to CRUD posts but not all features are available to all users. For example, privileged users can delete their posts whilst ordinary users cannot.
+\end
+
+\subsection{Patterns}
+\begin{description}
+\time The Model View Control (MVC) architecture will be used in the system.
+This architecture allows change to the system's state (The Model) is completed through a common interface (The Control). (The View) is where developments are made to user interfaces and these changes are independent to the system providing extensibility at a low cost.
+PHP’s implicit MVC features will be used to implement this architecture. 
+\item We chose MVC because:
+\item[$\bullet$] It encapsulates the interaction from the user and transforms those interactions (in the form of requests) into business logic that interacts with the system model to produce responses. 
+\item[$\bullet$] A (multi-)layered approach encapsulated by MVC which enables the separation of business logic proving the need for sub-systems and internal and external API’s.
+\end
+
+\subsection{Human Access Channel}
+\begin{description}
+\item End users interact with the web client to submit and interact with application jobs and to avail themselves of scalable system tools.
+\item Thin Web client:
+\item We need a thin web client as it allows the client to be relieved of computation duties and offers more security. The data will be verified by the server.
+\end
+
+\subsection{Access Channels}
+\begin{description}
+\item Android client -which is the mobile application, is out of our project scope. It runs on android software architecture.
+\item The Web Client -communicates to services layer through RESTful web services in the access layer. It provides a web-based human intergration channel.
+\item Purpose:
+\item[$\bullet$] Make all user services from the business logic layer accessible through the web browsers.
+\item[$\bullet$] Capture information for the request of objects in the business logic layer and submit the service requests to that layer and render the responses back to the user.
+\item[$\bullet$] JSF-2  Java Server Facelets.
+\item[$\bullet$]The managed beans who manage the state for the user and issue the service requests to the services layer will do so.
+\item[$\bullet$] Access to the stateless session beans from the services layer is obtained through dependency injected.
+\end 
+
+\item Services:
+\item[$\bullet$] Web services
+\item[$\bullet$] RESTful web services
+\item[$\bullet$] RESTful web services induce desirable properties, such as performance, scalability, and modifiability and this enables services to work best on the web.
+\item[$\bullet$] Note: These services have access to services layer
+
+\item Database: 
+\item[$\bullet$] MySQL
+\item[$\bullet$] There’s a need for multiple database connections, with connection pooling.
+\item[$\bullet$] No need for explicit implementation.
+
+\begin{description}
+\item This architecture will be based on Service Oriented Architecture (SOA) reference architecture. It is a loosely-coupled architecture where services exist independently from each other. They communicate with each other by means of protocols and standards-based interfaces such as SOAP and XML Schema to define messages passed between objects. In this case SOAP would not work.
+\item Services are deemed as individual objects so new services and functionality can easily be added to the existing system during progression.
+\item Reasons to use SOA:
+\item[$\bullet$] It is flexible and agile.
+\item[$\bullet$] System is open to change and easy alteration
+\item[$\bullet$] Simplicity of implementation.
+\item[$\bullet$] Reuse of objects
+\end
+
+\subsection{System Access Channel}
+\begin{description}
+\item Systems administrators interact with the project to configure and build software installations on individual nodes, schedule, manage, and account for application jobs and to continuously monitor the status of the system, repairing it as needed.
+\item The web-based component of the system will be implemented in PHP, AJAX and HTML. Connections to the system will be made to the shared virtual IP of the web servers. Floating the same virtual IP address between multiple servers in this manner will be managed by Ucarp. The databases will run in MySQL. The technologies selected for the system are already in use within the client company.  These technologies include JavaEE, which we will use to run the web services, JPA, to manage the relational data in JavaEE, JPQL, make queries for the database, JSF to build component user interfaces using COBALT and AJAX. 
+\item Reasons to use COBALT:
+\item It allows for great simplicity and flexibility in the implementation of systems software. Systems administrators can easly customize or replace individual components independently of others.
+\item This makes deployment of the application much easier, since the required software and technologies are already up and running. It also provides maintenance benefits, since the system administrators will already be familiar with the technologies.
+\item The system needs to offer support for up to a thousand to two thousand simultaneous users.
+\item This will be achieved by means of multiple web servers running PHP, which is known to scale well and is used by many large websites. MySQL can be configured to be highly scalable and available as the traffic flow increases.
+\item PHP has many security modules available which can be used to provide presentation-layer authentication.
+
+\item CakePHP is one of the PHP frameworks that we will use. It is a rapid development framework that makes coding in PHP much easier and efficient. It is also based on the MVC architecture which will fit well with our current architectural design. 
+\item Reasons to use CakePHP:
+\item[$\bullet$]Application scaffolding
+\item[$\bullet$]Code generation
+\item[$\bullet$] MVC architecture
+\item[$\bullet$]Supports both version 4 and 5 of php
+\item[$\bullet$]Flexible caching
+\end
+
+\subsection{Intergration Access Channel}
+\begin{description}
+The system will have to be intergrated with the Hamster System to mark threads and intergrate marking with Buzz Space. Libraries interact with system software as they deal with the host environment.
+\end
 
 \section{Quality Requirements}
 \subsection{Performance}
