--- a/COS301_Phase2-Group3a.tex
+++ b/COS301_Phase2-Group3a.tex
@@ -137,9 +137,8 @@ For further references see \href{https://github.com/COS301-Group-3-A-Phase2/Part
 
 \newpage
 
-% You are welcome to edit these
-% They change according to how you structure your work.
 \section{Change Log}
+
 
 \section{Introduction}
 Designing and implementing a system as the one in question is a vast amount of work and requires a lot of planning and thinking. All the functional requirements needed for the system were covered in the previous phase. In this phase all the non-functional requirements will be covered. These are all categorized as architectural requirements.  \\
@@ -156,21 +155,16 @@ The scope of this phase is understanding the functional requirements covered in 
 
 \section{Access Channel Requirements}
 \begin{description}
-\item Logging in to the system is done over HTTP POST, and  we send the user's password as an MD5-encrypted string. The user's login details are kept in an HTTP session so the user does not have to keep logging in every time he/she makes a request to the server. HTTP sessions are invalidated when the user logs out. Since all communication is done over HTTPS, the login credentials should be relatively safe from malicious stealing or sniffing of data between the client and server applications.
-\item Common address redundancy protocol will be used to provide load-balancing as well as fail-safe redundancy. The servers will share a virtual IP address, which will be floated between them if the main server fails or if there are load problems.
-\item All CRUD actions that will make changes to the database contents will be intercepted at the services layer and logged automatically along with the id of the user making the changes, the status and the date. This will ensure auditability of the system. Any actions that would delete data from the database will not destroy any data, but instead set a `deleted' flag.
+\item Logging in to the system is done over HTTPS POST, and  we send the user's password as an MD5-encrypted string. 
+\item The user's login details are kept in an HTTP session so the user does not have to keep logging in every time he/she makes a request to the server. 
+\item HTTP sessions are invalidated when the user logs out.
+\item Communication is done over HTTPS, the login credentials should be relatively safe from malicious sniffing of data between the client and server applications.
+\item Common address redundancy protocol will be used to provide load-balancing as well as fail-safe redundancy. 
+\item The servers will share a virtual IP address, which will be floated between them if the main server fails or if there are load problems.
+\item All CRUD actions that will make changes to the database contents will be intercepted at the services layer and logged automatically along with the id of the user making the changes, the status and the date. This will ensure auditability of the system. 
+\item Any actions that would delete data from the database will not destroy any data, but instead set a `deleted' flag.
 \item Users are assigned a status level and permissions are set by their status. These permissions will determine the features covered by the interface. This will ensure the users only access features for which they are authorized. For example a guest cannot comment on the posts. 
 \item Users are allowed to CRUD posts but not all features are available to all users. For example, privileged users can delete their posts whilst ordinary users cannot.
-\end
-
-\subsection{Patterns}
-\begin{description}
-\time The Model View Control (MVC) architecture will be used in the system.
-This architecture allows change to the system's state (The Model) is completed through a common interface (The Control). (The View) is where developments are made to user interfaces and these changes are independent to the system providing extensibility at a low cost.
-PHP’s implicit MVC features will be used to implement this architecture. 
-\item We chose MVC because:
-\item[$\bullet$] It encapsulates the interaction from the user and transforms those interactions (in the form of requests) into business logic that interacts with the system model to produce responses. 
-\item[$\bullet$] A (multi-)layered approach encapsulated by MVC which enables the separation of business logic proving the need for sub-systems and internal and external API’s.
 \end
 
 \subsection{Human Access Channel}
@@ -199,29 +193,27 @@ PHP’s implicit MVC features will be used to implement this architecture.
 \item[$\bullet$] Note: These services have access to services layer
 
 \item Database: 
-\item[$\bullet$] MySQL
+\item[$\bullet$] Relational Database.
 \item[$\bullet$] There’s a need for multiple database connections, with connection pooling.
 \item[$\bullet$] No need for explicit implementation.
-
-\begin{description}
-\item This architecture will be based on Service Oriented Architecture (SOA) reference architecture. It is a loosely-coupled architecture where services exist independently from each other. They communicate with each other by means of protocols and standards-based interfaces such as SOAP and XML Schema to define messages passed between objects. In this case SOAP would not work.
-\item Services are deemed as individual objects so new services and functionality can easily be added to the existing system during progression.
-\item Reasons to use SOA:
-\item[$\bullet$] It is flexible and agile.
-\item[$\bullet$] System is open to change and easy alteration
-\item[$\bullet$] Simplicity of implementation.
-\item[$\bullet$] Reuse of objects
-\end
 
 \subsection{System Access Channel}
 \begin{description}
 \item Systems administrators interact with the project to configure and build software installations on individual nodes, schedule, manage, and account for application jobs and to continuously monitor the status of the system, repairing it as needed.
-\item The web-based component of the system will be implemented in PHP, AJAX and HTML. Connections to the system will be made to the shared virtual IP of the web servers. Floating the same virtual IP address between multiple servers in this manner will be managed by Ucarp. The databases will run in MySQL. The technologies selected for the system are already in use within the client company.  These technologies include JavaEE, which we will use to run the web services, JPA, to manage the relational data in JavaEE, JPQL, make queries for the database, JSF to build component user interfaces using COBALT and AJAX. 
+\item The web-based component of the system will be implemented in PHP, AJAX and HTML. 
+\itme Connections to the system will be made to the shared virtual IP of the web servers. 
+\item Floating the same virtual IP address between multiple servers in this manner will be managed by Ucarp. The databases will run in a Relational Database. 
+\item The technologies selected for the system are already in use within the client company. 
+\item These technologies include JavaEE, which we will use to run the web services, JPA, to manage the relational data in JavaEE, JPQL, make queries for the database, JSF to build component user interfaces using COBALT and AJAX. 
+
 \item Reasons to use COBALT:
-\item It allows for great simplicity and flexibility in the implementation of systems software. Systems administrators can easly customize or replace individual components independently of others.
-\item This makes deployment of the application much easier, since the required software and technologies are already up and running. It also provides maintenance benefits, since the system administrators will already be familiar with the technologies.
+\item[$\bullet$] It is simple and flexible. Systems administrators can easly customize or replace individual components independently of others.
+\item[$\bullet$] Deployment is easier, since the required software and technologies are already up and running.
+\item[$\bullet$] It also provides maintenance benefits, since the system administrators will already be familiar with the technologies.
 \item The system needs to offer support for up to a thousand to two thousand simultaneous users.
-\item This will be achieved by means of multiple web servers running PHP, which is known to scale well and is used by many large websites. MySQL can be configured to be highly scalable and available as the traffic flow increases.
+
+\item This will be achieved by means of multiple web servers running PHP, which is known to scale well and is used by many large websites. 
+\item MySQL can be configured to be highly scalable and available as the traffic flow increases.
 \item PHP has many security modules available which can be used to provide presentation-layer authentication.
 
 \item CakePHP is one of the PHP frameworks that we will use. It is a rapid development framework that makes coding in PHP much easier and efficient. It is also based on the MVC architecture which will fit well with our current architectural design. 
@@ -233,12 +225,32 @@ PHP’s implicit MVC features will be used to implement this architecture.
 \item[$\bullet$]Flexible caching
 \end
 
-\subsection{Intergration Access Channel}
+%Kal and Jessica please have a look at this to see if you'd like it in your section
+\subsection{Architecture Patterns}
 \begin{description}
-The system will have to be intergrated with the Hamster System to mark threads and intergrate marking with Buzz Space. Libraries interact with system software as they deal with the host environment.
+\time The Model View Control (MVC) architecture will be used in the system.
+This architecture allows change to the system's state (The Model) is completed through a common interface (The Control). (The View) is where developments are made to user interfaces and these changes are independent to the system providing extensibility at a low cost.
+PHP’s implicit MVC features will be used to implement this architecture. 
+\item We chose MVC because:
+\item[$\bullet$] It encapsulates the interaction from the user and transforms those interactions (in the form of requests) into business logic that interacts with the system model to produce responses. 
+\item[$\bullet$] A (multi-)layered approach encapsulated by MVC which enables the separation of business logic proving the need for sub-systems and internal and external API’s.
 \end
 
-\section{Quality Requirements}
+\begin{description}
+\item This architecture will be based on Service Oriented Architecture (SOA) reference architecture. It is a loosely-coupled architecture where services exist independently from each other. They communicate with each other by means of protocols and standards-based interfaces such as SOAP and XML Schema to define messages passed between objects. In this case SOAP would not work.
+\item Services are deemed as individual objects so new services and functionality can easily be added to the existing system during progression.
+\item Reasons to use SOA:
+\item[$\bullet$] It is flexible and agile.
+\item[$\bullet$] System is open to change and easy alteration
+\item[$\bullet$] Simplicity of implementation.
+\item[$\bullet$] Reuse of objects
+\end
+
+%Armand and Sean please plug in your information here
+\subsection{Intergration Access Channel}
+
+
+\section{Quality Requirements
 \subsection{Performance}
 	\subsubsection{Expectation:} The system has to have a high standard of performance and should not disappoint the user.
 	\subsubsection{Prioritization:} Critical
@@ -344,10 +356,6 @@ Users who are registered as guests on the BuzzSpace will only be allowed to read
 \item[$\bullet$] Peer-to-Peer Network
 \item[$\bullet$] Services Oriented Architectures
 \end{description}
-
-\section{Policies}
-
-\section{Traceability Matrix}
 
 \section{References}
 PIETERSE, V. 2015. COS301: Mini project Buzz. In: Lecture notes issued online. University of Pretoria. Pretoria, South Africa
